# chall2025-one-hundred-percent-wrong

./: HACKME.md  README.md  challenge.yaml  challenge_template.yaml  docker-compose.yaml
solution/: FLAGS.md  README.md
source/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
source/chall/: one-hundred-percent-wrong  socat_server.sh
source/code/: one-hundred-percent-wrong.c
